tests/error/error04.sml
val prog =
  PROGRAM
    {classes=[],decls=[],funcs=[],stmts=[ST_EXP {exp=EXP_NEW {class="A"}}]}
  : program
;
